# cmake_base

./: .clang-format  .clang-tidy  .cmake-format.py  .editorconfig  CMakeLists.txt  Readme.md  conanfile.txt
cmake/: compilation.cmake  create_test.cmake  format.cmake  targets.cmake
doc/: CMakeLists.txt  doxyfile.in
githooks/: CMakeLists.txt
test/: CMakeLists.txt
